# plainflux

./: .eslintrc.json  .gitignore  CLAUDE.md  LICENSE  PORTABLE_BUILD_GUIDE.md  README.md  RELEASE_NOTES.md  RUST_FIXES_SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.test.json
.github/workflows/: README.md  add-portable-to-release.yml  build-portable.yml  build-simple.yml  build.yml  ci.yml  release.yml
scripts/: build-all-portable.sh  build-portable.ps1  build-portable.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  error.rs  git_manager.rs  integration_tests.rs  lib.rs  macros.rs  main.rs  note_manager.rs  utils.rs
src/api/: tauri.ts
src/components/: BacklinksPanel.tsx  BookmarksList.css  BookmarksList.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  GraphView.css  GraphView.tsx  Help.css  Help.tsx  InputDialog.tsx  MarkdownRenderer.tsx  NoteEditor.tsx  NotesList.tsx  NotesTree.tsx  QuickAddBookmark.css  QuickAddBookmark.tsx  QuickAddTodo.css  QuickAddTodo.tsx  RecentNotes.tsx  SearchPanel.tsx  Settings.css  Settings.tsx  Sidebar.tsx  TabBar.tsx  TagsList.tsx  TemplateSettings.css  TemplateSettings.tsx  TodosList.css  TodosList.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useKeyboardShortcuts.ts  useWindowState.ts
src/utils/: blockReferences.ts  editorAutocomplete.ts  editorNoteLinkExtension.ts  editorScrolling.ts  editorThemes.ts  fileHandler.ts  foldingExtension.ts  gitBlame.ts  imageHandler.ts  multiCursor.ts  searchHighlight.ts  tabState.ts  themes.ts  transclusionExtension.ts
tests/: tabState.test.js
